# ros2

./: LICENSE  README.md
mine/: CMakeLists.txt  package.xml
mine/config/: controllers.yaml
mine/launch/: ur_sim_controll.launch.py  ur_sim_moveit.launch.py
mine/urdf/: robotiq_macro.urdf.xacro  ur_gz.ros2_control.xacro  ur_gz.urdf.xacro  ur_macro.xacro
mine_moveit_config/: CMakeLists.txt  package.xml
mine_moveit_config/config/: joint_limits.yaml
mine_moveit_config/launch/: ur_moveit.launch.py
mine_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: controllers.yaml
my_robot_bringup/launch/: ur_control.launch.py  ur_rsp.launch.py  view.launch.py
my_robot_bringup/urdf/: robotiq.ros2_control.xacro  robotiq_macro.urdf.xacro  ur.ros2_control.xacro  ur_gripper.urdf.xacro  ur_to_robotiq_adapter.urdf.xacro
my_robot_description/: CMakeLists.txt
my_robot_description/launch/: view.launch.py
my_robot_description/urdf/: robot.urdf.xacro  robotiq.ros2_control.xacro  ur.ros2_control.xacro  ur_macro.xacro
my_robot_moveit_config/: .setup_assistant  package.xml
my_robot_moveit_config/config/: joint_limits.yaml  lerp_planning.yaml  moveit_controllers.yaml  ros2_controllers.yaml  trajopt_planning.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
my_robot_simulation/: CMakeLists.txt
my_robot_simulation/config/: controllers.yaml
my_robot_simulation/launch/: my_robot_sim.launch.py  sim.launch.py  sim_moveit.launch.py  simsim.launch.py
my_robot_simulation/rviz/: view.rviz
my_robot_simulation/worlds/: my_world.sdf  my_world2.sdf  sensor.sdf
